--- a/templates/index.html
+++ b/templates/index.html
@@ -16,33 +16,39 @@
 <a href="{% url 'page' edito.slug %}">{% trans "Read more" %}</a>
 <br>
 
+{% featured as featured %}
+
 <div class="last__media">
     <h2 class="page__related__title--inverse">{% trans "Last medias" %}</h2> <br>
 
+    {% for post in featured.blogposts.all %}
     <div class="last__media__entry">
-        {% featured_posts as post %}
-        <h3>{% trans "Article" %}</h3>
-        {% include 'blog/includes/post_card.html' %}
-        <a href="{% url 'blog_post_list' %}" class="btn btn-full">{% trans "All" %} {% trans "articles" %}</a>
+         <h3>{% trans "Article" %}</h3>
+         {% include 'blog/includes/post_card.html' %}
+         <a href="{% url 'blog_post_list' %}" class="btn btn-full">{% trans "All" %} {% trans "articles" %}</a>
     </div>
+    {% endfor %}
 
+    {% for artist in featured.artists.all %}
     <div class="last__media__entry">
-        {% featured_artist as artist %}
-        <h3>{% trans "Artist" %}</h3>
-        {% include "festival/inc/artist_card.html" %}
-        <a href="{% url 'festival-artist-list' %}" class="btn btn-full">{% trans "All" %} {% trans "artists" %}</a>
+         <h3>{% trans "Artist" %}</h3>
+         {% include "festival/inc/artist_card.html" %}
+         <a href="{% url 'festival-artist-list' %}" class="btn btn-full">{% trans "All" %} {% trans "artists" %}</a>
     </div>
+    {% endfor %}
 
+    {% for video in featured.videos.all %}
     <div class="last__media__entry">
-        {% featured_video as video %}
         <h3>{% trans "Video" %}</h3>
         {% include 'festival/inc/video_card.html' %}
         <a href="{% url 'festival-video-list' %}" class="btn btn-full">{% trans "All" %} {% trans "videos" %}</a>
     </div>
+    {% endfor %}
 </div>
 
-{% featured_playlist as playlist %}
+{% for playlist in featured.playlists.all %}
 <h2 class="page__related__title--inverse">{% trans "Playlist" %}</h2>
 {% include 'festival/inc/audio_playlist.html' %}
+{% endfor %}
 
 {% endblock %}
