--- a/festival/static/scss/base/_typography.scss
+++ b/festival/static/scss/base/_typography.scss
@@ -240,3 +240,8 @@ pre > p {
   padding: 0;
   font: $bold 1em/1.2 $base_font_family;
 }
+
+.section__title {
+  font-size: 2rem;
+  font-family: $header_font_family;
+}
