--- a/festival/static/scss/base/_layout.scss
+++ b/festival/static/scss/base/_layout.scss
@@ -45,7 +45,7 @@
   @media (min-width : $desktop ) {
     float: left;
     width: 25%;
-    // margin: 0 0 3rem;
+    margin: 0;
     border-bottom: none;
     &.aside-home {
       margin-top: -2rem;
