--- a/festival/static/scss/config/_variables.scss
+++ b/festival/static/scss/config/_variables.scss
@@ -17,6 +17,7 @@ $manifeste16_darker    : darken($manifeste16, 10);
 $manifeste16_alt       : #00818d;
 
 $main_color            : $manifeste16;
+$main_color_darker     : $manifeste16_darker;
 $base_background_color : #f7f7f7;
 $main_color_alt        : $manifeste16_alt;
 
