--- a/app/festival/templates/festival/inc/audio_playlist.html
+++ b/app/festival/templates/festival/inc/audio_playlist.html
@@ -2,13 +2,22 @@
 
 {% for audio in playlist.audios.all %}
 {% if forloop.first %}
-<p>{{ audio.title }}</p>
-<audio id="audio" preload="auto" tabindex="0" controls="" >
+<audio id="audio" preload="auto" tabindex="0" controls="">
     <source id="primarysrc" src="{{ audio.closed_source_url }}">
     <source id="secondarysrc" src="{{ audio.open_source_url }}">
     {{ audio.title }}
 </audio>
+<ul id="playlist">
 {% endif %}
+    <li class="active">
+        <a href="{{ audio.closed_source_url }}" data-altsrc="{{ audio.open_source_url }}">
+            {{ audio.title }}
+        </a>
+    </li>
 {% endfor %}
 {% if forloop.first %}
+</ul>
 {% endif %}
+
+<script type="text/javascript" src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
+<script src="{% static "js/player.js" %}"></script>
