--- a/templates/agenda/event_location_list.html
+++ b/templates/agenda/event_location_list.html
@@ -42,7 +42,7 @@
                   {% editable event.location %}
                   <p>
                       {{ location.address }}<br />
-                      <a href="{{ location|google_nav_url }}" target="_blank" class=""> Get Directions </a>
+                      <a href="{{ location|google_nav_url }}" target="_blank" class="">{% trans "Click to get the interactive map" %}</a>
                   </p>
                   <a href="{{ location|google_nav_url }}" target="_blank" class="">
                   {% google_static_map location 900 300 15 %}
