--- a/festival/static/scss/index.scss
+++ b/festival/static/scss/index.scss
@@ -71,7 +71,8 @@
 /**
  * _Modules
  */
-@import 'modules/artist-card',
+@import 'modules/card',
+        'modules/artist-card',
         'modules/artist-detail',
         'modules/video-card',
         'modules/event-card',
