--- a/app/festival/static/scss/modules/video-card.scss
+++ b/app/festival/static/scss/modules/video-card.scss
@@ -10,6 +10,16 @@
 
   }
 
+  box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.4);
+
+  @media (min-width : $desktop ) {
+      transition: .3s;
+      &:hover {
+          box-shadow: 0px 1px 15px 0px rgba(0, 0, 0, 0.8);
+          transform: scale(1.01);
+      }
+  }
+
   &__thumbnail img {
     display: block;
   }
