--- a/templates/agenda/event_detail.html
+++ b/templates/agenda/event_detail.html
@@ -135,7 +135,7 @@
     {% with event.get_previous_by_publish_date as previous %}
         {% if previous %}
             <li class="split-left">
-                <a href="{{ previous.get_absolute_url }}" class="pager__item--before">&larr; {{ previous }}</a>
+                <a href="{{ previous.get_absolute_url }}" class="pager__item--before">&larr; {% trans "Previous event" %}</a>
             </li>
         {% endif %}
     {% endwith %}
@@ -143,7 +143,7 @@
     {% with event.get_next_by_publish_date as next %}
         {% if next %}
             <li class="split-right">
-                <a href="{{ next.get_absolute_url }}" class="pager__item--after">{{ next }} &rarr;</a>
+                <a href="{{ next.get_absolute_url }}" class="pager__item--after">{% trans "Next event" %} &rarr;</a>
             </li>
         {% endif %}
     {% endwith %}
