--- a/app/festival/templates/festival/video_list.html
+++ b/app/festival/templates/festival/video_list.html
@@ -7,7 +7,8 @@
 {% endblock %}
 
 {% block main %}
-<div class="video__list">
+<div class="video__list  msry__container">
+    <div class="msry__sizer"></div>
     {% for video in object_list %}
      {% if video.status == 2 %}
       {% include 'festival/inc/video_card.html' %}
