--- a/festival/templates/festival/inc/video_card.html
+++ b/festival/templates/festival/inc/video_card.html
@@ -1,6 +1,6 @@
 {% load i18n %}
 
-<div class="video__card">
+<div class="video__card  msry__item">
     <div class="video__card__thumbnail">
         <img src="{{ video.poster_url }}" alt="">
     </div>
