--- a/app/festival/static/scss/index.scss
+++ b/app/festival/static/scss/index.scss
@@ -84,4 +84,5 @@
         'modules/push-calendar',
         'modules/calendar',
         'modules/tabs',
-        'modules/user';
+        'modules/tabs',
+        'modules/location';
