--- a/app/templates/agenda/event_location_list.html
+++ b/app/templates/agenda/event_location_list.html
@@ -27,34 +27,18 @@
 {% endblock %}
 
 {% block main %}
-
 <div id="tabs" class="c-tabs">
   <div class="c-tabs-nav">
     {% for location in object_list %}
-        <a href="#" class="c-tabs-nav__link {% if forloop.first %}is-active{% endif %}">{{ location.title }}</a>
+        <a href="#" class="c-tabs-nav__link {% if forloop.first %}is-active{% endif %}">
+            {% if location.featured_name %}{{ location.featured_name }}{% else %}{{ location.title }}{% endif %}</a>
     {% endfor %}
   </div>
   {% for location in object_list %}
       <div class="c-tab {% if forloop.first %}is-active{% endif %}">
-          <div class="c-tab__content">
-              <h3 class="location__title">{{ location.title }}</h3>
-                  {% block event_detail_location %}
-                  {% editable event.location %}
-                  <p>
-                      {{ location.address }}<br />
-                      <a href="{{ location|google_nav_url }}" target="_blank" class="">{% trans "Click to get the interactive map" %}</a>
-                  </p>
-                  <a href="{{ location|google_nav_url }}" target="_blank" class="location__map">
-                    {% google_static_map location 900 300 15 %}
-                  </a/>
-                  {% endeditable %}
-                  {% endblock %}
-          </div>
+          {% include "agenda/includes/event_location.html" %}
       </div>
   {% endfor %}
-
-
-
 {% endblock %}
 
 {% block right_panel %}
